
<resources>
    <string name="app_name">VirtuoBookings</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <!--
        This is the name that users will see when interacting with this channel.
        It should describe the category of notifications that will be sent through this channel
     -->
    <string name="default_notification_channel_name" translatable="true">Important</string>

    <!--Shared Preference Keys -->
    <string name="preference_fact_type_key">fact_type_pref</string>

    <string name="title_contacts">Chat</string>
    <string name="title_settings">Settings</string>
    <string name="title_appointments">Appointments</string>

    <string name="sign_in">Sign In</string>
    <string name="signout_button_text">Sign out</string>

    <string name="registration_user_type_title">I am a: </string>
    <string name="user_type_service_provider">Service Provider</string>
    <string name="user_type_client">Client</string>
    <string name="user_type_staff">Staff</string>

    <string name="no_internet_connection">No internet connection</string>
    <string name="submit_button_text">Submit</string>
    <string name="send_button_text">Send</string>
    <string name="enter_message_hint">Enter Message</string>
    <string name="search_hint">Search by ID, name, or email</string>
    <string name="no_users_found">No users found</string>
    <string name="search_results_header">Search results: %1$s</string>
    <string name="book_appointment_text">Book Appointment</string>
    <string name="cancel_appointment_text">Cancel Appointment</string>
    <string name="title_admin">Admin</string>
    <string name="messages_text">Messages</string>
    <string name="title_admin_messages">Admin Messages</string>
    <string name="title_edit_users">Edit Users</string>
    <string name="message_text">Message</string>
    <string name="message_client_text">Message Client</string>
    <string name="delete_account_text">Delete account</string>

    <string name="settings_name_text">Name: %1$s</string>
    <string name="settings_id_text">ID: %1$s</string>
    <string name="settings_email_text">Email: %1$s</string>
    <string name="timezone_info">All dates and times are shown in GMT</string>
</resources>
